# orbit-wars_rust-implementation

./: Cargo.toml  README.md  pyproject.toml
examples/: bench.rs  dump_moves.rs  dump_moves_multistep.rs
src/: agents.rs  comets.rs  engine.rs  features.rs  flow.rs  geometry.rs  lib.rs  mapgen.rs  py.rs  pymath.rs  pyrandom.rs  replay.rs  state.rs  vecenv.rs
tests/: comets_parity.rs  comets_ref.json  full_parity.rs  mapgen_parity.rs  mapgen_ref.json  parity.rs  rng_parity.rs  rng_ref.json
